@@ -25,15 +25,8 @@ Important
   problem, this should result in a single email. Tickets would need to be
   grouped in some way, probably with a new "group" table.
 
-* Save send-link-to addresses into the DB.
-  Required for e-mail tracking, and nice to have anyway as a reminder.
-
 * Move alien tickets/grants from the administrator's lists to a separated page.
   My take: definitely important, high priority.
-
-* Store the current language when creating a ticket/grant, so that notification
-  emails are sent with the same locale. Important/easy. See [private]
-  discussion with Mokrani.
 
 * Use file templates instead of hard-coded messages to compose the e-mails.
   See a lot of good suggestions sent by Morkani.
@@ -62,7 +55,7 @@ Nice to have
 * Support e-mail tracking when using send-link-to.
   Nice to have, but not critical.
 
-* Set sidewide defaults for tickets in config.php.
+* Set sidewide limits for ticket/grants in config.php.
 
 * Enforce sitewide ticket/grants limits.
 
