@@ -34,7 +34,7 @@ $defaultGrantTotalDays = 7;
  */
 
 // cfgVersion: configuration file version
-$cfgVersion = "0.9";
+$cfgVersion = "0.10";
 
 // logFile: set this if you want new tickets, downloads and purges logged to a
 //          file. If the setting contains no slashes, it will be used as a tag
